# Renderit

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT-MAP.md  README.md  Readme.md
.github/workflows/: deploy-web.yml  test-vscode-extension.yml  test-web.yml
assets/shaders/: basic.frag  basic.vert  pbr.frag  shadow.vert  unlit.frag
docs/: codebase.txt
docs/adr/: 0001-web-viewer-is-a-threejs-rewrite.md  0002-threejs-native-loaders-only.md  0003-auto-orientation-scope.md  0004-web-ui-stack.md  0005-fast-follow-is-vscode-extension-not-browser-extension.md
docs/research/: vscode-marketplace-publishing.md  vscode-webview-constraints.md
educational/: .clang-format  README.md
educational/assets/shaders/: basic.frag  shadow.frag
educational/sandbox/: sandbox.cpp  sandbox_colored_cube.cpp  sandbox_plaincube_indices.cpp  sandbox_rubics_cube.cpp  sandbox_rubics_nolighting.cpp  sandbox_whitecube_verts.cpp
educational/src/core/: Application.cpp  Window.cpp  Window.h
educational/src/renderer/: Buffer.h  Material.cpp  Material.h  Mesh.h  Shader.cpp  ShadowMap.cpp  ShadowMap.h  Texture.h
educational/src/scene/: AssimpLoader.h
sandbox/: sandbox.cpp  sandbox_colored_cube.cpp  sandbox_original.cpp  sandbox_plaincube_indices.cpp  sandbox_whitecube_verts.cpp
src/: main.cpp
src/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/renderer/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp
src/scene/: AssimpLoader.cpp  AssimpLoader.h  ObjLoader.cpp  ObjLoader.h
vscode-extension/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.webview.json  vite.config.ts
vscode-extension/scripts/: copy-assets.mjs
vscode-extension/shared/: relayedFileEntry.ts
vscode-extension/src/: RenderitEditorProvider.ts  extension.ts  getWebviewHtml.test.ts  getWebviewHtml.ts  openWithRenderit.ts  renderitWebview.ts
vscode-extension/test/: extension.test.ts
vscode-extension/test/fixtures/: fixture-box-zup.dae  fixture-box-zup.fbx  fixture-box.stl
vscode-extension/webview/: filesFromRelayedEntries.test.ts  filesFromRelayedEntries.ts  main.ts  persistedState.test.ts  persistedState.ts
web/: CONTEXT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/models/: showcase.glb
web/scripts/: generate-test-assets.mjs
web/src/: main.ts  style.css
web/src/test/: fixtures.ts  setup.ts
web/src/viewer/: AutoFit.test.ts  AutoFit.ts  DragDropFiles.test.ts  DragDropFiles.ts  ImportFileSet.test.ts  ImportFileSet.ts  ImportResolver.test.ts  ImportResolver.ts  LightingPresets.test.ts  LightingPresets.ts  MetadataExtractor.test.ts  MetadataExtractor.ts  ResourceResolver.test.ts  ResourceResolver.ts  Viewer.test.ts  (+1 more)
(+8 files in other folders)
